k8s/car-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-service
  template:
    metadata:
      labels:
        app: car-service
    spec:
      containers:
      - name: car-service
        image: saga-car-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: car-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
  selector:
    app: car-service
