k8s/flight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-service
  template:
    metadata:
      labels:
        app: flight-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
      containers:
      - name: flight-service
        image: AbdennasserBentaleb/saga-flight-service:1.0.0
        imagePullPolicy: Never
        securityContext:
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8082
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: tmp-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
spec:
  type: ClusterIP
  ports:
  - port: 8082
  selector:
    app: flight-service
